(dirs :standard \ node_modules)

(melange.emit
 (target output)
 (libraries reason-react styled-ppx.css styled-ppx.emotion melange-fetch)
 (module_systems es6)
 (runtime_deps vite.config.js index.html index.css)
 (preprocess
  (pps melange.ppx reason-react-ppx styled-ppx ppx_deriving_json.browser)))
