(dirs :standard \ node_modules)

(melange.emit
 (alias app)
 (target output)
 (libraries
  reason-react
  styled-ppx.css
  styled-ppx.emotion
  melange-fetch
  melange-webapi
  bindings
  melange-react-query)
 (module_systems es6)
 (preprocess
  (pps melange.ppx reason-react-ppx styled-ppx ppx_deriving_json.browser)))

(rule
 (alias vite)
 (targets
  (dir dist))
 (deps
  (alias app)
  vite.config.js
  index.html)
 (action
  (system "../../node_modules/.bin/vite build"))
 (mode
  (promote (until-clean))))
